@@ -2,7 +2,7 @@
 /* styles for users admin page */
 
 div#accountlist { max-height:640px; overflow:auto; }
-
+tr.missing td, tr.missing td a { color: #998; }
 
 /* styles for account details admin page */
 
